[gd_scene load_steps=25 format=3 uid="uid://b1of8vehbfmeq"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_s4ast"]
[ext_resource type="Texture2D" uid="uid://c5uvpaybpqfj4" path="res://assets/sprites/heart_blue.png" id="2_0wy2h"]
[ext_resource type="Texture2D" uid="uid://cjh5a1ff7vve7" path="res://assets/sprites/attack_old.png" id="2_qutl4"]
[ext_resource type="Texture2D" uid="uid://cg8i4g1se77yd" path="res://assets/sprites/jump_old.png" id="3_fgxve"]
[ext_resource type="Texture2D" uid="uid://0442sxw8hnd" path="res://assets/sprites/heart_red.png" id="3_n4tfl"]
[ext_resource type="Texture2D" uid="uid://ctrmlynlhvhuc" path="res://assets/sprites/idle_old.png" id="4_n2x2m"]
[ext_resource type="Texture2D" uid="uid://cwxyx8x3qvvuc" path="res://assets/sprites/run_old.png" id="5_vhn4l"]

[sub_resource type="SpriteFrames" id="SpriteFrames_djhwt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_0wy2h")
}],
"loop": true,
"name": &"heart_empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_n4tfl")
}],
"loop": true,
"name": &"heart_full",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_n4tfl")
}, {
"duration": 1.0,
"texture": ExtResource("2_0wy2h")
}, {
"duration": 1.0,
"texture": ExtResource("3_n4tfl")
}, {
"duration": 1.0,
"texture": ExtResource("2_0wy2h")
}],
"loop": false,
"name": &"heart_hit",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_te7bf"]
atlas = ExtResource("2_qutl4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_210o3"]
atlas = ExtResource("2_qutl4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8qeu"]
atlas = ExtResource("2_qutl4")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tl8k"]
atlas = ExtResource("2_qutl4")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3mk4"]
atlas = ExtResource("3_fgxve")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2hbk"]
atlas = ExtResource("4_n2x2m")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxnbl"]
atlas = ExtResource("4_n2x2m")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vlbg"]
atlas = ExtResource("3_fgxve")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_528p4"]
atlas = ExtResource("3_fgxve")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_umptx"]
atlas = ExtResource("3_fgxve")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5ais"]
atlas = ExtResource("5_vhn4l")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlo0q"]
atlas = ExtResource("5_vhn4l")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqevd"]
atlas = ExtResource("5_vhn4l")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1lka1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_te7bf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_210o3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8qeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tl8k")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3mk4")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2hbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxnbl")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vlbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_528p4")
}, {
"duration": 1000.0,
"texture": SubResource("AtlasTexture_umptx")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5ais")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlo0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqevd")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v4dux"]
radius = 27.0
height = 123.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ufq3f"]
radius = 3.25
height = 8.0

[node name="enemy" type="CharacterBody2D"]
collision_layer = 4
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_s4ast")

[node name="heart_1" type="AnimatedSprite2D" parent="."]
position = Vector2(20, -73)
sprite_frames = SubResource("SpriteFrames_djhwt")
animation = &"heart_hit"

[node name="heart_2" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -73)
sprite_frames = SubResource("SpriteFrames_djhwt")
animation = &"heart_hit"

[node name="heart_3" type="AnimatedSprite2D" parent="."]
position = Vector2(-20, -73)
sprite_frames = SubResource("SpriteFrames_djhwt")
animation = &"heart_hit"

[node name="sprite" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_1lka1")
animation = &"attack"
autoplay = "idle"
frame = 3
frame_progress = 1.0

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_v4dux")
debug_color = Color(0.7, 0.233333, 0, 0.419608)

[node name="nav_agent" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="nav_timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="i_frame_timer" type="Timer" parent="."]
wait_time = 0.2

[node name="atk_area" type="Area2D" parent="."]
position = Vector2(40, -30)
scale = Vector2(8, 8)
collision_mask = 2

[node name="atk_hitbox" type="CollisionShape2D" parent="atk_area"]
position = Vector2(-0.125, 2.25)
shape = SubResource("CapsuleShape2D_ufq3f")
debug_color = Color(0.701961, 0, 0, 0.419608)

[connection signal="timeout" from="nav_timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="i_frame_timer" to="." method="_on_i_frame_timeout"]
[connection signal="body_entered" from="atk_area" to="." method="_on_atk_entered"]
